quorum/test/tests/TypeChecker/Pass/TextAppend.quorum
class Main
    action Main
        Text t 
        t:SetValue("hello")
        text p = "hello"

        t:Append("5")
        p:Append("5")

        print t:GetValue()
        print p
    end
end