quorum/test/tests/TypeChecker/Fail/ImpAssignTextIntObj.quorum
Integer int
int:setValue(5)
text t = int